github New File

--- a/about.html
+++ b/about.html
@@ -416,7 +416,7 @@
 
     <!--LeaderShip section starts -->
     <section id="ExpartTeam" data-aos="fade-up" data-aos-duration="2000">
-      <div class="container">
+      <div class="container" id="expartTeam_Arrows">
         <h2>Leadership Expart Team</h2>
         <div class="arrows">
           <span class="leftArrowS d-none d-lg-block"><i class="bi bi-caret-left-fill"></i></span>
@@ -650,7 +650,7 @@
     <!-- Aytor instagram Section Ends -->
 
     <!-- about footer section Starts -->
-    <footer id="aboutFooter" data-aos="fade-up" data-aos-delay="300" data-aos-duration="2000">
+    <footer id="aboutFooter">
       <!-- about footer top -->
       <div class="container">
          <div class="footerTop">
