--- a/compare-products.html
+++ b/compare-products.html
@@ -363,7 +363,7 @@
     </section>
    <!-- product-compare Section Css Ends -->
     <!-- Product-Compare footer section Starts -->
-    <footer id="aboutFooter" data-aos="fade-up" data-aos-duration="2000">
+    <footer id="aboutFooter">
       <!-- footer top -->
       <div class="container">
          <div class="footerTop">
