--- a/contract.html
+++ b/contract.html
@@ -373,7 +373,7 @@
   <!-- contact us page content ends -->
 
   <!-- Contract footer section Starts -->
-     <footer id="aboutFooter" data-aos="fade-up" data-aos-duration="2000">
+     <footer id="aboutFooter">
       <!-- footer top -->
       <div class="container">
          <div class="footerTop">
