--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
       <!-- Gallery Section Ends -->
       <!-- Product section starts -->
       <section id="product" data-aos="fade-up" data-aos-duration="2000">
-        <div class="container">
+        <div class="container" id="product-arrows">
           <h2>New Arrivals Products</h2>
           <div class="arrows">
             <span class="leftArrow col-12 d-none d-lg-block"><i class="fa-solid fa-angle-left"></i></span>
@@ -845,7 +845,7 @@
 
 
       <!-- footer section Starts -->
-      <section id="Footer" data-aos="fade-up" data-aos-duration="2000">
+      <section id="Footer">
       <!-- footer top section starts -->
 
         <div class="Footer_top">
