--- a/shop-cart.html
+++ b/shop-cart.html
@@ -331,7 +331,7 @@
     </section>
    <!-- Shop-cart Section Css Ends -->
     <!-- Shop-cart footer section Starts -->
-    <footer id="aboutFooter" data-aos="fade-up" data-aos-duration="2000">
+    <footer id="aboutFooter">
       <!-- footer top -->
       <div class="container">
          <div class="footerTop">
