--- a/shop-gird.html
+++ b/shop-gird.html
@@ -1228,7 +1228,7 @@
 
    
     <!-- about footer section Starts -->
-    <footer id="aboutFooter" data-aos="fade-up" data-aos-delay="300" data-aos-duration="3000">
+    <footer id="aboutFooter">
       <!-- about footer top -->
       <div class="container">
          <div class="footerTop">
