--- a/shop-details.html
+++ b/shop-details.html
@@ -912,7 +912,7 @@
 
      
     <!-- Shop-Detials footer section Starts -->
-    <footer id="aboutFooter" data-aos="fade-up" data-aos-duration="2000">
+    <footer id="aboutFooter">
       <!-- footer top -->
       <div class="container">
          <div class="footerTop" >
