--- a/wishlist.html
+++ b/wishlist.html
@@ -390,7 +390,7 @@
 <!--  wishlist section ends -->
 
   <!-- Contract footer section Starts -->
-     <footer id="aboutFooter" data-aos="fade-up" data-aos-duration="2000">
+     <footer id="aboutFooter">
       <!-- footer top -->
       <div class="container">
          <div class="footerTop">
